--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 	<div id = "container"></div>
 
-	<script src = "js/jquery-1.11.1.min.js" type = "text/javascript"></script>
-	<script src = "js/my_script.js" type = "text/javascript"></script>
-	<script src = "js/lodash.js"></script>
+	<script src = "jquery-1.11.1.min.js" type = "text/javascript"></script>
+	<script src = "my_script.js" type = "text/javascript"></script>
+	<script src = "lodash.js"></script>
 
 </body>
 
